# ModelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  README.md  premake5.lua
scripts/: CompileShaders.bat  SetupPremake.bat  SetupVulkan.bat
src/: ModelViewer.cpp  ModelViewer.h  ModelViewerCamera.cpp  ModelViewerCamera.h  ModelViewerDevice.cpp  ModelViewerDevice.h  ModelViewerModel.cpp  ModelViewerModel.h  ModelViewerObject.h  ModelViewerPipeline.cpp  ModelViewerPipeline.h  ModelViewerRenderer.cpp  ModelViewerRenderer.h  ModelViewerSimpleRenderSystem.cpp  ModelViewerSimpleRenderSystem.h  ModelViewerSwapChain.cpp  ModelViewerSwapChain.h  ModelViewerWindow.cpp  ModelViewerWindow.h  imgui.ini  main.cpp
src/Camera/: ModelViewerCamera.cpp  ModelViewerCamera.h
src/Input/: ModelViewerKeyboardController.cpp  ModelViewerKeyboardController.h
src/Renderer/: ImGuiRenderer.cpp  ImGuiRenderer.h  ModelViewerRenderer.cpp  ModelViewerRenderer.h  ModelViewerSimpleRenderSystem.cpp  ModelViewerSimpleRenderSystem.h
src/shaders/: compile.bat  compileshaders.bat  simple_shader.frag  simple_shader.vert
